# aiohttp-sqlalchemy

./: .flake8  .gitignore  .mypy.ini  .prospector.yaml  .readthedocs.yml  .travis.yml  LICENSE  README.rst  example.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
aiohttp_sqlalchemy/: __init__.py  constants.py  decorators.py  deprecation.py  exceptions.py  handlers.py  middlewares.py  typedefs.py  utils.py  views.py  web_handlers.py
aiohttp_sqlalchemy/views/: __init__.py  abc.py  mixins.py
docs/: advansed.rst  conf.py  index.rst  installation.rst  quickstart.rst  reference.rst  releases.rst
examples/: __init__.py  base.py  hybrid_approach.py  multiple_decorated_functions.py  multiple_middlewares.py  nested_app.py  simple_example.py  single_decorated_cbv.py  single_decorated_class_method.py  single_decorated_function.py  single_middleware.py  test_example.py
src/aiohttp_sqlalchemy/: __init__.py  decorators.py  exceptions.py  typedefs.py  utils.py  web_handlers.py
tests/: __init__.py  conftest.py  test_aiohttp_sqlalchemy.py  test_bind.py  test_constants.py  test_decorators.py  test_deprecation.py  test_metainfo.py  test_middlewares.py  test_sa_bind.py  test_setup.py  test_utils.py  test_views.py  test_web_handlers.py
