[tool.poetry]
name = "aiohttp-sqlalchemy"
packages = [{include = "aiohttp_sqlalchemy", from = "src" }]
version = "1.0.0"
description = "SQLAlchemy 2.0 support for aiohttp."
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://pypi.org/project/aiohttp-sqlalchemy/"
repository = "https://github.com/ri-gilfanov/aiohttp-sqlalchemy"
documentation = "https://aiohttp-sqlalchemy.readthedocs.io/"

keywords = ["aiohttp", "sqlalchemy", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.10.5"
aiohttp-things = "^1.0.0"
sqlalchemy-things = "^1.0.0"
aiomysql = { version = ">=0.2.0", optional = true }
aiosqlite = { version = ">=0.20.0", optional = true }
asyncpg = { version = ">=0.29.0", optional = true }

[tool.poetry.extras]
mysql = ["aiomysql"]
postgresql = ["asyncpg"]
sqlite = ["aiosqlite"]

[tool.poetry.dev-dependencies]
aiomysql = ">=0.2.0"
aiosqlite = ">=0.20.0"
asyncpg = ">=0.29.0"
ruff = ">=0.6.5"
mypy = ">=1.11.2"
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
Sphinx = ">=7.1.2"
sphinx_rtd_theme = ">=2.0.0"
tomli = ">=2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src", "tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", "ANN102", "ANN401", "COM812", "D", "FA102", "ISC001", "N803", "N806",
    "PGH003", "PLR2004", "RUF001", "RUF002", "RUF003", "RUF012", "Q000",
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*.py" = ["A001", "INP001"]
"examples/*.py" = ["ANN"]
"tests/*.py" = ["PLR2004", "S101"]

[tool.ruff.lint.mccabe]
max-complexity = 5
